# DevPulseAI

./: .env.example  .gitignore  README.md  implementation_plan.md  main.py  mcp_server.py  pyproject.toml  requirements.txt  walkthrough.md  รายละเอียดโครงการ_Excel_Roadmap_Agent.md
.agents/skills/resource-optimization/: SKILL.md
.agents/skills/roadmap-fetching/: SKILL.md
.agents/skills/timeline-risk-assessment/: SKILL.md
.agents/skills/weekly-report-summarizer/: SKILL.md
Example/: Comprehensive Implementation Plan.md  kaggle_submission_data.md  video_script_en.md  โครงการที่ต้องการจะทำ.md  โครงงาน Capstone Project.md
app/: agent.py  security.py  session_manager.py
database/: mock_roadmap.json
tests/: test_agent_workflow.py  test_mcp.py  test_security.py
