[project]
name = "excel-roadmap-agent"
version = "0.1.0"
description = "Excel Roadmap Chatbot Agent for IT Management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "mcp>=0.1.0",
    "pytest>=7.4.0",
    "google-generativeai>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
